Alpha 31

   * Minor changes and tweaks
     * Cargo scooping now only requires a collision against the ship rather
       than a specific part of it (again) (#1922)
     * Improve point sprite (LMR billboard) rendering performance (#1927,
       #1929, #1928)
     * Improve city rendering performance (#1927)

   * Model changes
     * Handle missing material definitions by providing a basic white default
       material if none are specified (#1817, #1916)

   * Internal changes
     * Separate station defs from LMR station models (#1913)

Alpha 30

   * New features
     * New model system (SGModel) (#1676, #1208, #813, #1852, #1914)
     * Rotation damping icon and control on the panel (#1842, #1837)
     * OSX: Hold the option key down when launching pioneer.app to launch the
       model viewer instead (#1803)
     * New volcanic surface effects on some planets (#1782)
     * New and improved autopilot (#1812)
     * Improved atmosphere rendering: scattering, sunsets, thinner fogs and
       ground lighting fixes (#1888, #1891)
     * Russian translation (#1899, #1713)

   * Minor changes and tweaks
     * Don't allocate projectile geometry for every projectile. Huge
       performance increase during combat (#1822)
     * Main menu now has keyboard shortcuts again (#1821)
     * Player's name now updates during editing in Personal Information view (#1845)
     * Rondel system moved further away from Sol and surrounding stars (#1861, #1815)
     * Star fade-in has been adjusted to make stars less visible in daytime (#1881)
     * Some missions now state the distance to the target system (#1886, #1909)
     * Try harder to find a populated homeworld for a faction (#1860, #1792)
     * Clicking cancel from the Load dialog now returns you to the game (#1847, #1325)
     * Bulk ships are now only placed at orbital stations (#1890)
     * Improve building self-shadowing and lighting (#1898, #1811)